force-app/main/default/objects/Doctor__c/fields/Doctor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Contact__c</fullName>
    <label>Doctor_Contact</label>
    <type>Phone</type>
</CustomField>