force-app/main/default/objects/Doctor__c/fields/Patient_Count__c.field-meta.xml
<CustomField>
    <fullName>Patient_Count__c</fullName>
    <label>Patient Count</label>
    <summaryForeignKey>Patient__c.Patient_Name1__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>