force-app/main/default/objects/Doctor__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiologist</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Family Physicians</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Nephrologists</fullName>
            </value>
            <value>
                <fullName>Ortho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>